# freertos-simulation

./: .cproject  .gitignore  .project  BUILD.BAT  CLEAN.BAT  CMakeLists.txt  README.md  configurations.yaml  configurations.yaml~  generator.py
Configs/: FreeRTOSConfig.h  UserConfig.h
FreeRTOS-Plus-CLI/: FreeRTOS_CLI.c  Sample-CLI-commands.c
board-hardware-drivers/BMI08x-Sensor-API/Src/: bmi088.c  bmi08a.c  bmi08g.c  bmp3.c
board-hardware-drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h
build-in-windows/: CMakeLists.txt  configurations.yaml  generator.py
build-on-linux/: CMakeLists.txt  generator.py
build-on-windows/: CMakeLists.txt
configurations/: FreeRTOSConfig.h  UserConfig.h
cxx/: csv.h
flight-computer/: main.c
flight-computer/board/: board.c  hardware_definitions.h  interrupt_handlers.c  interrupt_handlers.h
flight-computer/board/components/: IMU.c  IMU.h  buzzer.c  buzzer.h  flash.c  flash.h  imu_sensor.h  pressure_sensor.h  recovery.c  recovery.h
flight-computer/board/components/impl/: buzzer.c  imu_sensor.c  pressure_sensor.c
flight-computer/command-line-interface/: controller.c  controller.h
flight-computer/command-line-interface/tools/: configure.c  configure.h  mem.c  mem.h  read.c  read.h  sysctl.c  sysctl.h
flight-computer/command_line_interface/: controller.h
flight-computer/core/: flight_controller.c  flight_controller.h  system_configuration.c  system_configuration.h
flight-computer/event-detection/: data_window.h  event_detector.c  event_detector.h  moving_buffer.h
flight-computer/memory-management/: memory_manager.c  memory_manager.h  queue.c  queue.h
flight-computer/port/: hal_port.h
flight-computer/protocols/: SPI.c  SPI.h  UART.c  UART.h
flight-computer/protocols/impl/: SPI.c  UART.c
flight-computer/sensor-simulation/: datafeeder.h  imu_sensor.c  pressure_sensor.c  pressure_sensor.h
flight-computer/sensor_simulation/: csv.h  datafeeder.cpp  imu_sensor.h  pressure_sensor.c
flight-computer/sim-port/: hal_port.h
flight-computer/sim-port/sensor-simulation/: buzzer.c  datafeeder.cpp  flash.c  imu_sensor.c  pressure_sensor.c
flight-computer/sim-port/transmission-protocols/: UART.c
flight-computer/stm32/: hardware_definitions.h
flight-computer/stm32/components/: buzzer.c  flash.c  flash.h  recovery.c
flight-computer/utilities/: common.h
os-kernel/FreeRTOS-Plus-CLI/: FreeRTOS_CLI.c
os-kernel/FreeRTOS/Source/include/: FreeRTOSConfig.h
rtos_test/: buzzer.c  buzzer.h  flash.c  flash.h  flight_controller.h  flight_system_configuration.h  hal_port.h  hardware_definitions.h  main.c  main_blinky.c  recovery.c  recovery.h
rtos_test/events/: event_detector.c  event_detector.h
rtos_test/memory_management/: memory_manager.c  memory_manager.h  queue.c  queue.h
rtos_test/protocols/: SPI.c  SPI.h  UART.c  UART.h
rtos_test/stm32/: STM32.c  STM32.h
rtos_test/tasks/: app_threads_controller.c  app_threads_controller.h  flight_state_controller.c  flight_state_controller.h  flight_state_machine.c  flight_state_machine.h  timer.c  timer.h
rtos_test/tasks/command_line_interface/: controller.c  controller.h  definitions.h
rtos_test/tasks/sensors/: datafeeder.cpp  datafeeder.h  imu_sensor.c  imu_sensor.h  pressure_sensor.c  pressure_sensor.h
rtos_test/utilities/: common.h  math.h
